Bug 382082 - Investment report - Wrong sum up totals
Summary: Investment report - Wrong sum up totals
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-07 01:08 UTC by aperali
Modified: 2018-03-28 08:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments
Screen snap of problem (609.54 KB, image/jpeg)
2017-07-07 01:08 UTC, aperali
Details

Note You need to log in before you can comment on or make changes to this bug.
Description aperali 2017-07-07 01:08:26 UTC
Created attachment 106478 [details]
Screen snap of problem

Hi,

I dont know if it is a bug from KMM or mine ;-)
But when viewing Investment price graph it is not sum up the values as I suposed should be. Please, see attached image. I even have any investment inside the summarized accounts.

Thank you,
Comment 1 wojnilowicz 2017-08-12 10:26:26 UTC
Git commit 612de6ae5480f680db3f435d976c47c2341d1b68 by Łukasz Wojniłowicz.
Committed on 12/08/2017 at 09:42.
Pushed by wojnilowicz into branch 'master'.

Filter out unneeded rows out of price graph
FIXED-IN:5.0

M  +4    -0    kmymoney/mymoney/mymoneyreport.cpp
M  +2    -0    kmymoney/views/kreportsview.cpp

https://commits.kde.org/kmymoney/612de6ae5480f680db3f435d976c47c2341d1b68