Filter out unneeded rows out of price graph

BUG:382082
FIXED-IN:5.0